# shuttle-cch23

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile
.sqlx/: query-175b56a345fd505201769bc7fd6fc67a7d24218585384530c684770e377dcd9d.json  query-22d05d7d1fc686d26302a33cf4f678c65e1660f060a59cef865a7b0b7b3574c6.json  query-2bc905f1394f5c41fc93ac039779f329677817f03bf21e1f5aba705fa8556bf8.json  query-4b8f1c9feb78538320a9cae344efc79bea34d50d9533cc47d6f81fc040e498fa.json  query-59758d2591b17c05ed657f597e2876f067423c961a5a5b4de6457383cfae669f.json  query-c186bb4b3f1d5245afee9fe87eb58d82dde3254c49737d1ef5ba66a2a041b16a.json  query-d0073c9ab98975ab9b95e87665069e23b0133f1c802431a3fd1677e8fff9c332.json  query-e7334d5cb6c1c902e81e94b44e7e3b94fb68a09c6cb2781c6c25db3f69061d1d.json  query-ef715b8bc700c666ba9ad6f0fccb4f26f5a47b61238dcfba7c158e3bd05cfe67.json  query-f1b47e9fcf1b8dd89c4b42596169e819c187548a28d6754a80d286720be4a45e.json
assets/integrations/shuttlings-cch23/: Day 19 - Task 01 - Table Tennis Server.bru  Day 19 - Task 02.bru  bruno.json
src/: day_00.rs  day_01.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_four.rs  day_neg_one.rs  day_one.rs  day_seven.rs  day_six.rs  lib.rs  main.rs  router.rs  template.rs
