[package]
name = "cch23-weshnaw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
derive_more = "0.99.17"
rbase64 = "2.0.3"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"

[dev-dependencies]
axum-test-helper = { version = "0.3.0", features = ["cookies"] }
rstest = "0.18.2"
