[package]
name = "shuttlings-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["json", "multipart", "ws", "query"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
derive_more = "0.99.17"
rbase64 = "2.0.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["rc", "derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
shuttle-persist = "0.49.0"
tokio = "1.28.2"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
image = "0.24.7"
ulid = "1.1.0"
uuid = "1.6.1"
chrono = "0.4.31"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
futures = "0.3.29"
html-escape = "0.2.13"
regex = "1.10.2"
sha256 = "1.4.0"
tar = "0.4.40"
gix = "0.68"
s2 = "0.0.12"
country-boundaries = "1.2.0"
isocountry = "0.3.2"
itertools = "0.12.0"
anyhow = "1.0.76"
